--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Added by Luke (for ReactJS example) */
+.avatar {
+    border-radius: 100%;
+}
